--- a/01_azure.yml
+++ b/01_azure.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   connection: local
   vars:
-    user: write your username here
+    user: brsk
   tasks:
   - name: Create resource group
     azure_rm_resourcegroup:
